[project]
name = "lacny_teleop"
version = "0.1"
authors = [
  { name="Simon Fetzel", email="simon.fetzel@stuba.sk" },
]
description = "A simple teleoperation library which uses MediaPipe and monocular depth estimation using DepthAnythingV2."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sfetzel/LacnyTeleop"
Issues = "https://github.com/sfetzel/LacnyTeleop/issues"